gccida/g1/memory_displacement_operand
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/memory_displacement_operand/src/i386.c:3912:43: error: must use 'enum' tag to refer to type 'machine_mode'
int  memory_displacement_operand( rtx op, machine_mode mode) 
                                          ^
                                          enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/memory_displacement_operand/src/i386.c:3921:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 3460, "memory_displacement_operand"); 
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/memory_displacement_operand/src/obj/i386.o] Error 1
